Scrollbar glitch fixed

--- a/src/styles/spread-sheet.css
+++ b/src/styles/spread-sheet.css
@@ -79,7 +79,7 @@
 
 }
 .spreadsheet{
-    overflow: hidden;
+    overflow: auto;
 }
 
 .spreadsheet::-webkit-scrollbar {
